<resources>
    <string name="app_name">MainActivity4</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_regno">Enter Regno</string>
    <string name="enter_d_o_b">Enter D.O.B</string>
    <string name="enter_school">Enter School</string>
    <string name="enter_course">Enter Course</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="enter_county">Enter County</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="welcome">WELCOME</string>
    <string name="login">LOGIN</string>
    <string name="Putusername">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="signup">SIGNUP</string>
    <string name="_login">LOGIN</string>
    <string name="userfullname">Userfullname</string>
    <string name="school">school</string>
    <string name="d_o_b">d.o.b</string>
    <string name="regno">regno</string>
    <string name="course">course</string>
    <string name="gender">gender</string>
    <string name="status">status</string>
    <string name="county">county</string>
    <string name="_password">password</string>
    <string name="update">UPDATE</string>
    <string name="back">BACK</string>
    <string name="_username">Username</string>
    <string name="_back">BACK</string>
    <string name="_submit">SUBMIT</string>
</resources>